--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <a href="./bankwallet.apk" download='image' class="download-btn">Download
+    <a href="./bankwallet.apk" download='bankwallet.apk' class="download-btn">Download
         <i class="fa fa-download"></i>
     </a>
 </body>
